feat(agent-profile): 重构智能体方案及新增预设功能
- 重新命名相关界面和变量，统一“Agent Profile”为“智能体方案”
- 新增代码内置版本化的智能体方案创建预设接口
- 智能体方案相关UI增加“初始化内置智能体”功能按钮及对话框
- 调整智能体方案模型选择，仅支持聊天模型
- 引入生命周期及版本校验，确保智能体方案引用的模型服务和权限方案有效
- 完善智能体方案草稿状态管理，新增创建中状态判断
- 修正提示文本和异常信息，提升用户体验
- App Server引入Provider模型发现服务及嵌入绑定支持，完善相关RPC处理器
- 调整发布验收矩阵，更新覆盖率及Provider/Profile部分内容
- 细化外观设置页面，添加actionContent接口支持测试并修复相关测试用例